--- a/web/congratulation.css
+++ b/web/congratulation.css
@@ -50,10 +50,11 @@ h1 {
     font-family: 楷体;
   }
 
-  .right{
-    position:absolute;bottom:0%; right:5%;
+  .rp{
+    position:fixed;bottom:0%; right:5%;
     font-family: 楷体;
-    font-size: 30px;
+    font-size: 25px;
+    color: rgba(236,138,164,1.0);
   }
 
   .navbar {
