--- a/web/video.css
+++ b/web/video.css
@@ -46,10 +46,11 @@
     margin: 0 auto; /* 居中对齐 */
   }
 
-  .right{
-    position:absolute;bottom:0%; right:5%;
+  .rp{
+    position:fixed;bottom:0%; right:5%;
     font-family: 楷体;
-    font-size: 30px;
+    font-size: 25px;
+    color: rgba(236,138,164,1.0);
   }
   .navbar {
     overflow: hidden;
